{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 71,
  "lineage": "21248373-4783-dbc3-925f-881e8bd7d23a",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "nc-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/db044149-df09-4871-bcaa-db118b8f3769/resourceGroups/nimbuscompute-resources/providers/Microsoft.Network/publicIPAddresses/nc-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.234.122.100",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "nc-ip",
            "resource_group_name": "nimbuscompute-resources",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nc-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/db044149-df09-4871-bcaa-db118b8f3769/resourceGroups/nimbuscompute-resources/providers/Microsoft.Network/networkInterfaces/nc-nic",
            "internal_domain_name_suffix": "itscbqrraxeene04culzenjpqh.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/db044149-df09-4871-bcaa-db118b8f3769/resourceGroups/nimbuscompute-resources/providers/Microsoft.Network/publicIPAddresses/nc-ip",
                "subnet_id": "/subscriptions/db044149-df09-4871-bcaa-db118b8f3769/resourceGroups/nimbuscompute-resources/providers/Microsoft.Network/virtualNetworks/nimbuscompute-network/subnets/nimbuscompute-subnet"
              }
            ],
            "location": "uksouth",
            "mac_address": "60-45-BD-12-2D-5B",
            "name": "nc-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "nimbuscompute-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/db044149-df09-4871-bcaa-db118b8f3769/resourceGroups/nimbuscompute-resources/providers/Microsoft.Compute/virtualMachines/nc-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.nc-ip",
            "azurerm_resource_group.nimbuscompute-rg",
            "azurerm_subnet.nc-subnet",
            "azurerm_virtual_network.nc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/db044149-df09-4871-bcaa-db118b8f3769/resourceGroups/nimbuscompute-resources/providers/Microsoft.Network/networkSecurityGroups/nc-sg",
            "location": "uksouth",
            "name": "nc-sg",
            "resource_group_name": "nimbuscompute-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nc-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.nimbuscompute-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nc-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/db044149-df09-4871-bcaa-db118b8f3769/resourceGroups/nimbuscompute-resources/providers/Microsoft.Network/networkSecurityGroups/nc-sg/securityRules/nc-dev-rule",
            "name": "nc-dev-rule",
            "network_security_group_name": "nc-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "nimbuscompute-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nc-sg",
            "azurerm_resource_group.nimbuscompute-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nc-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/db044149-df09-4871-bcaa-db118b8f3769/resourceGroups/nimbuscompute-resources/providers/Microsoft.Network/publicIPAddresses/nc-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.234.122.100",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "nc-ip",
            "resource_group_name": "nimbuscompute-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.nimbuscompute-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "nc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/db044149-df09-4871-bcaa-db118b8f3769/resourceGroups/nimbuscompute-resources/providers/Microsoft.Network/virtualNetworks/nimbuscompute-network/subnets/nimbuscompute-subnet",
            "name": "nimbuscompute-subnet",
            "resource_group_name": "nimbuscompute-resources",
            "virtual_network_name": "nimbuscompute-network"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.nimbuscompute-rg",
            "azurerm_virtual_network.nc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nc_sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/db044149-df09-4871-bcaa-db118b8f3769/resourceGroups/nimbuscompute-resources/providers/Microsoft.Network/virtualNetworks/nimbuscompute-network/subnets/nimbuscompute-subnet",
            "network_security_group_id": "/subscriptions/db044149-df09-4871-bcaa-db118b8f3769/resourceGroups/nimbuscompute-resources/providers/Microsoft.Network/networkSecurityGroups/nc-sg",
            "subnet_id": "/subscriptions/db044149-df09-4871-bcaa-db118b8f3769/resourceGroups/nimbuscompute-resources/providers/Microsoft.Network/virtualNetworks/nimbuscompute-network/subnets/nimbuscompute-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nc-sg",
            "azurerm_resource_group.nimbuscompute-rg",
            "azurerm_subnet.nc-subnet",
            "azurerm_virtual_network.nc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "nc-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c220e444-0531-46c8-935e-151792352f87",
            "id": "/subscriptions/db044149-df09-4871-bcaa-db118b8f3769/resourceGroups/nimbuscompute-resources/providers/Microsoft.Network/virtualNetworks/nimbuscompute-network",
            "location": "uksouth",
            "name": "nimbuscompute-network",
            "resource_group_name": "nimbuscompute-resources",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/db044149-df09-4871-bcaa-db118b8f3769/resourceGroups/nimbuscompute-resources/providers/Microsoft.Network/virtualNetworks/nimbuscompute-network/subnets/nimbuscompute-subnet",
                "name": "nimbuscompute-subnet",
                "security_group": "/subscriptions/db044149-df09-4871-bcaa-db118b8f3769/resourceGroups/nimbuscompute-resources/providers/Microsoft.Network/networkSecurityGroups/nc-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.nimbuscompute-rg"
          ]
        }
      ]
    }
  ]
}